# hiWaveTel

./: .coveragerc  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  GET_STARTED.md  README.exemplo.md  db.sqlite3  pyproject.toml  requirements.txt
apps/: __init__.py
config/: settings.py  urls.py
docker/: .env.example  Dockerfile  cleanup_sms_cron.sh  docker-compose.yml  entrypoint.sh  hiwavetel-cleanup.service  hiwavetel-cleanup.timer
docs/: architecture.md  comunicacao.md  hidishelink-bridge.md  usb-detection-ubuntu.md
scripts/: check_sms_system.py  run_coverage.sh  test_container_env.sh
tests/: __init__.py  conftest.py  test_allowed_hosts.py  test_api_sms.py  test_container_restart_api.py  test_dbus_watch.py  test_device_android_api.py  test_external_device.py  test_external_device_authentication.py  test_external_device_serializers.py  test_health.py  test_inbound_filters.py  test_inbound_processor.py  test_inbox_sync.py  test_management_commands.py  test_mmcli_client.py  test_mmcli_host.sh  test_modem_api.py  test_modem_env.py  test_modem_identity.py  test_modem_ready.py  test_modem_registry.py  test_modem_unlock.py  test_mqtt_client.py  test_mqtt_config_remote.py  test_performance_plan.py  test_queue_processor.py  test_remote_hidishelink_client.py  test_run_sms_watcher.py  test_schema_docs.py  test_serializers_validators_models.py  test_services.py  test_sms_reliability.py  test_sms_storage_rotation.py  test_sqlite_contract.py  test_system_readiness.py  test_wait_modem_ready.py  test_webhook_api.py  test_webhook_delivery.py  test_webhook_outbox.py
(+87 files in other folders)
